--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
+
+// @import 'assets/sass/main';
+
 /* You can add global styles to this file, and also import other style files */
+
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
