--- a/src/app/event-list/event-list-info-bottom-sheet/event-list-info-bottom-sheet.component.html
+++ b/src/app/event-list/event-list-info-bottom-sheet/event-list-info-bottom-sheet.component.html
@@ -1,3 +1,16 @@
-<p>
-  event-list-info-bottom-sheet works!
-</p>
+<div class="page-container">
+  <mat-card class="card-container">
+    <mat-card-header>
+      <mat-card-title>{{eventData.name}}</mat-card-title>
+      <mat-card-subtitle>{{eventData.age}}</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <mat-list text-center role="list" class="card-list-container" color="primary">
+        <mat-list-item> Pepper </mat-list-item>
+        <mat-list-item> Salt </mat-list-item>
+        <mat-list-item> Paprika </mat-list-item>
+      </mat-list>
+    </mat-card-content>
+    <button class="center-aligned" mat-raised-button>Register Now !!!</button>
+  </mat-card>
+</div>
