--- a/src/app/event-list/event-list-info-bottom-sheet/event-list-info-bottom-sheet.component.scss
+++ b/src/app/event-list/event-list-info-bottom-sheet/event-list-info-bottom-sheet.component.scss
@@ -9,6 +9,27 @@
   border-radius: 10px;
 }
 
+h3 {
+  margin: 0px;
+}
+
+.mat-card-subtitle {
+  font-weight: 800;
+  color: gray;
+}
+
+.mat-card-content {
+  flex: 1;
+  flex-direction: row;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.mat-divider {
+  position: relative;
+  background-color: grey;
+}
+
 .center-aligned {
   align-items: center;
   align-self: center;
@@ -19,6 +40,10 @@
 }
 
 .mat-list-item {
-    text-align: center;
-    color: grey;
+  text-align: center;
+  color: grey;
+}
+
+.mat-list-item {
+  height: 30px !important;
 }
