--- a/src/app/event-list/event-list.component.html
+++ b/src/app/event-list/event-list.component.html
@@ -23,7 +23,7 @@
         <mat-card class="card-container">
             <mat-card-header class="center-aligned">
                 <mat-card-title>{{list.name}}</mat-card-title>
-                <mat-card-subtitle>{{list.age}}</mat-card-subtitle>
+                <mat-card-subtitle>{{list.min_age}} - {{list.max_age}}</mat-card-subtitle>
                 </mat-card-header>
             <mat-card-actions class="action-button-container">
                 <button mat-raised-button class="action-buttons" (click)="openBottomSheet(list)"
